--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Nils Rommelfanger
+email: nelhimoud@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Software Engineer with 20 years of experience in backend technology, DevOps,
+  and Continuous Delivery. Specializing in Java, Kotlin, Spring Boot, Kubernetes,
+  and cloud-native architectures.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://elch78.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+github_username: elch78
 
 # Build settings
 theme: minima
